--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					<a href="https://lin-xiaox.github.io/UAIF1807-xiaomi/"><img src="img/xiaomi.png" alt=""></a>
-					<a href=""><img src="img/work4.jpg" alt=""></a>
+					<a href="https://lin-xiaox.github.io/UAIF1807-xiaomi/" target="blank"><img src="img/xiaomi.png" alt=""></a>
+					<a href=""  target="blank"><img src="img/work4.jpg" alt=""></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					<a href="https://lin-xiaox.github.io/Apple/"><img src="img/Apple-icon.png" alt=""></a>
-					<a href=""><img src="img/work5.jpg" alt=""></a>
+					<a href="https://lin-xiaox.github.io/Apple/" target="blank"><img src="img/Apple-icon.png" alt=""></a>
+					<a href=""><img src="img/work5.jpg" alt="" target="blank"></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					<a href="https://lin-xiaox.github.io/renlianshibie/"><img src="img/AIBox-icon.png" alt=""></a>
-					<a href=""><img src="img/work7.jpg" alt=""></a>
+					<a href="https://lin-xiaox.github.io/renlianshibie/" target="blank"><img src="img/AIBox-icon.png" alt=""></a>
+					<a href=""><img src="img/work7.jpg" alt="" target="blank"></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					<a href=""><img src="img/work4.jpg" alt=""></a>
-					<a href=""><img src="img/work8.jpg" alt=""></a>
+					<a href=""><img src="img/work4.jpg" alt="" target="blank"></a>
+					<a href=""><img src="img/work8.jpg" alt="" target="blank"></a>
 				</div>
 			</div>
 		</div>
